# player

./: Cargo.toml  Trunk.toml  index.html  player-ui-74cb18ea80fb7ec166bff7ef6038193baa948988517c2c9fe7d9cc374726ea0fbe95bcaa2cbe12f461cdf573eb04fdff.js  player-ui-74cb18ea80fb7ec166bff7ef6038193baa948988517c2c9fe7d9cc374726ea0fbe95bcaa2cbe12f461cdf573eb04fdff_bg.wasm  sign.sh
components/: Cargo.toml  index.html
components/src/: a.rs  alert.rs  button.rs  card.rs  dropdowns.rs  event.rs  input.rs  li.rs  lib.rs  lis.rs  list_group.rs  menu.rs  navs.rs  not_found.rs  select.rs  textarea.rs  timestamp_interval.rs  ul.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
statics/: styles.css
tests/: create_wallet.md  index.html  styles.css
views/: Cargo.toml
views/src/: add_wallet.rs  feedback.rs  header.rs  index.rs  lib.rs  menu.rs  request.rs  room_list.rs  state.rs  timestamp.rs
