[package]
name = "player-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { workspace = true, features = ["csr"] }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = {workspace = true}
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
web-sys = {workspace = true}
js-sys = {workspace = true}
views = { workspace = true }

[workspace]
members = ["src-tauri", "views", "components"]

[workspace.dependencies]
yew = { version = "0.21"}
serde = { version = "1.0"}
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
views = { path = "views" }
components = { path = "components" }
kit = { path = "kit" }
serde_json = "1.0"
gloo = "0.10.0"
gloo-events = "0.2.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
gloo-console = "0.3.0"
once_cell = "1.18.0"
chrono = "0.4.31"
stylist = "0.13.0"
tiny-bip39 = "1.0.0"
yewdux = "0.10.0"
